deploy/k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: news-dev
  name: news
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-dev
  template:
    metadata:
      labels:
        app: news-dev
    spec:
      containers:
        - image: image
          name: news
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: '0.1
              memory: 100M
            requests:
              cpu: '0.1'
              memory: 80M
          ports:
            - containerPort: 8080
              name: http
      imagePullSecrets:
        - name: pull-secret
