deploy/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: news
  name: news-svc-dev
spec:
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: news-dev
